--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap');
 
 *{
     margin: 0;
@@ -8,13 +8,13 @@
 }
 
 body{
-    font: 400 14px Roboto, sans-serif;
+    font: 400 14px Poppins, sans-serif;
     background: #f0f0f5;
     -webkit-font-smoothing: antialiased;
 }
 
 input,button,textarea{
-    font: 400 14px Roboto, sans-serif;
+    font: 400 14px Poppins, sans-serif;
 }
 
 form textarea {
@@ -32,20 +32,19 @@ button {
     cursor: pointer;
 }
 
-form input{
-
+form input {
     width: 100%;
     height: 60px;
-    color: #333;
-    border:1px solid #dcdce6 ;
-    border-radius: 8px;
+    color: #C4C4C4;
+    border: 0;
+    border-bottom: 2px solid #C9A261;
     padding: 0 24px;
 }
 
-.button{
+.button {
     width: 100%;
     height: 60px;
-    background: #e02041;
+    background: #C9A261;
     border:0;
     border-radius: 8px;
     color:#FFF;
@@ -55,7 +54,8 @@ form input{
     text-align: center;
     text-decoration: 18px;
     line-height: 60px;
-    transition: filter 0.2s;}
+    transition: filter 0.2s;
+}
 
 
 .button:hover{
@@ -67,7 +67,7 @@ form input{
     display: flex;
     align-items: center;
     margin-top: 40px;
-    color:#41414d;
+    color:#FFF;
     font-size:18px;
     text-decoration: none;
     font-size: 18px;
