--- a/frontend/src/pages/Register/styles.css
+++ b/frontend/src/pages/Register/styles.css
@@ -1,7 +1,7 @@
 .register-container{
 
     width:100%;
-    max-width: 1120px;
+    max-width: 1140px;
     height: 100vh;
     margin: 0 auto;
 
@@ -13,7 +13,7 @@
 .register-container .content{
     width: 100%;
     padding:96px;
-    background: #f0f0f5;
+    background: #501A1A;
     box-shadow: 0 0 100px rgba(0,0,0,0.1);
     border-radius: 8px;
 
@@ -29,7 +29,10 @@
 
 .register-container .content section h1{
     margin: 64px 0 32px;
-    font-size: 32px;
+    text-align: center;
+    color: #C9A261;
+    font-weight: 400;
+    font-size: 36px;
 }
 
 .register-container .content section p {
