--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -9,7 +9,7 @@
 
 body{
     font: 400 14px Roboto, sans-serif;
-    background: #f0f0f5;
+    background: #501A1A;
     -webkit-font-smoothing: antialiased;
 }
 
@@ -45,7 +45,7 @@ form input{
 .button{
     width: 100%;
     height: 60px;
-    background: #e02041;
+    background: #C9A261;;
     border:0;
     border-radius: 8px;
     color:#FFF;
@@ -71,7 +71,6 @@ form input{
     font-size:18px;
     text-decoration: none;
     font-size: 18px;
-    text-decoration: none;
     font-weight: 500;
     transition: opacity 0.2s;
 }
