--- a/frontend/src/pages/Logon/styles.css
+++ b/frontend/src/pages/Logon/styles.css
@@ -1,18 +1,115 @@
 .logon-container{
     width:100%;
-    max-width: 1120px;
     height: 100vh;
     margin: 0 auto;
+}
 
+.logon-container header {
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    vertical-align: middle;
+    background: rgba(255, 255, 255, 0.25);
+    height: auto;
+}
+
+.logon-container header img {
+    cursor: pointer;
+    width: 50px;
+    padding: 5px;
+    margin-left: 5px;
+}
+
+.logon-container header ul {
+    list-style: none;
+    float: left;
+}
+
+.logon-container header li {
+    display: inline-block;
+    text-align: center;
+    padding: 20px;
+}
+
+.logon-container header li.register{
+    border-left: #C9A261 0.6px solid;
+}
+.logon-container header li a {
+    text-decoration: none;
+    color: #FFF;
+    transition: opacity 0.2s;
+}
+
+.logon-container header li a:hover{
+    color: #C9A261;
+}
+
+/* .logon-container header{
+    display: inline-block;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 110px;
+    left: 100px;
+    top: 100px;
+    background: rgba(255, 255, 255, 0.05);
+}
+
+.logon-container header span {
+    font-size: 20px;
+    margin-left: 24px;
+}
+
+.logon-container header img {
+    height: 64px;
+}
+
+.logon-container header a {
+    width: 260px;
+    margin-left: auto;
+    margin-top: 10;
+}
+.logon-container header.nav {
+    padding-left: 100px;
+    margin-top:100px;
+
+}
+
+.logon-container header button {
+    height: 60px;
+    width: 60px;
+    border-radius: 4px;
+    border: 1px solid #dcdce6;
+    background: transparent;
+    margin-left: 16px;
+    transition: border-color 0.2s;
+    float: right;
+}
+ hover{
+    border-color: #999;
+} */
+
+.logon-container div.logon-body{
+    align-items: center;
+    display:flex;
+}
+
+.logon-container div.logon-body img{
+    width: 25%;
+    height: 100vh;
+    margin-right: 200px;
+    margin-top: 0px;
+    margin-left: 150px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    
 }
 
 .logon-container section.form{
-    width: 100%;
-    max-width: 350px;
-    margin-right: 30px;
+    width: 30%;
+    margin-right: 100px;
+    margin-left: 100px;
+    float:right;
+    
 }
 
 .logon-container section.form form{
@@ -20,8 +117,17 @@
 }
 
 .logon-container section.form form h1 {
-    font-size: 32px;
+    font-size: 36px;
     margin-bottom: 32px;
+    text-align: center;
+    color:#FFF;
+}
+
+.logon-container section.form form p {
+    font-size:24px;
+    margin-bottom: 32px;
+    text-align: justify;
+    color:#FFF;
 }
 
 .logon-container section.form form a{
@@ -32,7 +138,6 @@
     font-size:18px;
     text-decoration: none;
     font-size: 18px;
-    text-decoration: none;
     font-weight: 500;
     transition: opacity 0.2s;
 }
