--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap');
 
 *{
     margin: 0;
@@ -8,13 +8,13 @@
 }
 
 body{
-    font: 400 14px Roboto, sans-serif;
+    font: 400 14px Poppins, sans-serif;
     background: #501A1A;
     -webkit-font-smoothing: antialiased;
 }
 
 input,button,textarea{
-    font: 400 14px Roboto, sans-serif;
+    font: 400 14px Poppins, sans-serif;
 }
 
 form textarea {
