--- a/frontend/src/pages/Logon/styles.css
+++ b/frontend/src/pages/Logon/styles.css
@@ -1,5 +1,5 @@
 .logon-container{
-    width:100%;
+    width: 100%;
     height: 100vh;
     margin: 0 auto;
 }
@@ -8,17 +8,21 @@
     display: flex;
     justify-content: space-between;
     vertical-align: middle;
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(255, 255, 255, 0.1);
     height: auto;
 }
 
 .logon-container header img {
     cursor: pointer;
     width: 50px;
-    padding: 5px;
-    margin-left: 5px;
+    margin-left: 20px;
+
 }
 
+.logon-container header nav{
+    align-items: center;
+    justify-content: center;
+}
 .logon-container header ul {
     list-style: none;
     float: left;
@@ -26,13 +30,19 @@
 
 .logon-container header li {
     display: inline-block;
+    line-height: 110px;
     text-align: center;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-.logon-container header li.register{
-    border-left: #C9A261 0.6px solid;
+.logon-container header li.separator{
+    border-left: 1px solid #FFF;
+    vertical-align: middle;
+    height: 20px;
+    padding: 0;
 }
+
 .logon-container header li a {
     text-decoration: none;
     color: #FFF;
@@ -42,51 +52,6 @@
 .logon-container header li a:hover{
     color: #C9A261;
 }
-
-/* .logon-container header{
-    display: inline-block;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    height: 110px;
-    left: 100px;
-    top: 100px;
-    background: rgba(255, 255, 255, 0.05);
-}
-
-.logon-container header span {
-    font-size: 20px;
-    margin-left: 24px;
-}
-
-.logon-container header img {
-    height: 64px;
-}
-
-.logon-container header a {
-    width: 260px;
-    margin-left: auto;
-    margin-top: 10;
-}
-.logon-container header.nav {
-    padding-left: 100px;
-    margin-top:100px;
-
-}
-
-.logon-container header button {
-    height: 60px;
-    width: 60px;
-    border-radius: 4px;
-    border: 1px solid #dcdce6;
-    background: transparent;
-    margin-left: 16px;
-    transition: border-color 0.2s;
-    float: right;
-}
- hover{
-    border-color: #999;
-} */
 
 .logon-container div.logon-body{
     align-items: center;
@@ -120,6 +85,7 @@
     font-size: 36px;
     margin-bottom: 32px;
     text-align: center;
+    font-weight: 400;
     color:#FFF;
 }
 
