--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -7,13 +7,13 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     font: 400 14px Poppins, sans-serif;
     background: #501A1A;
     -webkit-font-smoothing: antialiased;
 }
 
-input,button,textarea{
+input, button, textarea{
     font: 400 14px Poppins, sans-serif;
 }
 
@@ -33,7 +33,6 @@ button {
 }
 
 form input{
-
     width: 100%;
     height: 60px;
     color: #333;
@@ -49,18 +48,19 @@ form input{
     border:0;
     border-radius: 8px;
     color:#FFF;
-    font-weight:700;
+    font-weight:600;
     margin-top:16px;
     display:inline-block;
     text-align: center;
     text-decoration: 18px;
     line-height: 60px;
-    transition: filter 0.2s;}
-
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    transition: filter 0.2s;
+}
 
 .button:hover{
     filter:brightness(90%)
-
 }
 
 .back-link{
