--- a/frontend/src/pages/Logon/styles.css
+++ b/frontend/src/pages/Logon/styles.css
@@ -16,7 +16,6 @@
     cursor: pointer;
     width: 50px;
     margin-left: 20px;
-
 }
 
 .logon-container header nav{
@@ -34,6 +33,7 @@
     text-align: center;
     padding-left: 20px;
     padding-right: 20px;
+    font-size: 17px;
 }
 
 .logon-container header li.separator{
@@ -66,7 +66,6 @@
     margin-left: 150px;
     padding-bottom: 30px;
     padding-left: 30px;
-    
 }
 
 .logon-container section.form{
@@ -75,10 +74,6 @@
     margin-left: 100px;
     float:right;
     
-}
-
-.logon-container section.form form{
-    margin-top: 100px;
 }
 
 .logon-container section.form form h1 {
@@ -114,4 +109,17 @@
 
 .logon-container section.form form a svg{
     margin-right:8px;
+}
+
+.logon-container footer {
+    background: rgba(255, 255, 255, 0.1);
+    height: 30px;
+}
+
+.logon-container footer p {
+    line-height: 30px;
+    justify-content: center;
+    text-align: center;
+    font-size: 12px;
+    color: #C9A261;
 }
