--- a/frontend/src/pages/Logon/styles.css
+++ b/frontend/src/pages/Logon/styles.css
@@ -111,6 +111,64 @@
     margin-right:8px;
 }
 
+.logon-container section.register-section{
+    width:100%;
+    height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f0f0f5;
+}
+
+.register-container .content{
+    width: 100%;
+    padding:0;
+    background: #f0f0f5;
+    box-shadow: 0 0 100px rgba(0,0,0,0.1);
+    border-radius: 8px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+}
+
+.register-container .content section {
+    width: 100%;
+    max-width: 380px;
+}
+
+.register-container .content section h1{
+    margin: 64px 0 32px;
+    text-align: center;
+    color: #C9A261;
+    font-weight: 400;
+    font-size: 36px;
+}
+
+.register-container .content section p {
+    font-size: 18px;
+    color: #C9A261;
+    text-align: justify;
+}
+
+.register-container .content form.formRegister {
+    width: 100%;
+    max-width: 350px;
+}
+
+.register-container .content form input {
+    margin-top: 18px;
+}
+
+.register-container .content form .input-group {
+    display: flex;
+}
+
+.register-container .content form .input-group input + input {
+    margin-left: 8px;
+}
+
 .logon-container footer {
     background: rgba(255, 255, 255, 0.1);
     height: 30px;
